fixing dark mode on reply

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -49,6 +49,10 @@
 		background-color: $darkDark;
 	}
 
+    .questions-item-comments-item {
+        background-color: $darkDark;
+    }
+
 	.cards-editor-cards li.active,
 	.cards-editor-cards li:hover {
 		color: $darkColor1;
